修改：Kconfig ，Makefile
Change-Id: I97ba3e9b28ce19bde830162735252a86eb5818db

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -678,6 +678,7 @@ source "drivers/misc/cxl/Kconfig"
 source "drivers/misc/ipu/Kconfig"
 source "drivers/misc/fpr_FingerprintCard/Kconfig"
 source "drivers/misc/airbrush/Kconfig"
+source "drivers/misc/timed_task/Kconfig"
 endmenu
 
 config OKL4_USER_VIPC
